@startuml
    header "ANDROID. Profile"

    package org.teta {

        package dto {
            class EnrichedMessage {
                -action
                -page
                -msisdn
                -enrichment
            }
            class Enrichment {
                -firstName
                -lastName
            }
            class Message {
                -content
                -EnrichmentType
            }
            enum EnrichmentType {
                +MSISDN
            }
            class UserInfo {
                -firstName
                -lastName
            }
        }

        package service {
            package impl {
                class InMemoryUserRepository {
                    getUserInfo(String msisdn)
                    addUserInfo(String msisdn, UserInfo userInfo)
                }
                class MessageValidatorImpl {
                    isValidJson(String json)
                    isContainsMsisdn(String json)
                }
                class MSISDNEnricher {
                    enrich(String content)
                }
            }
            interface MessageEnricher {
                enrich()
            }
            interface MessageValidator {
                isValidJson()
                isContainsMsisdn()
            }
            interface UserRepository {
                getUserInfo()
            }
            class EnrichmentService {
                enrich(Message message)
            }
        }

        EnrichedMessage --> Enrichment
        Message --> EnrichmentType
        InMemoryUserRepository ..|> UserRepository
        MessageValidatorImpl ..|> MessageValidator
        MSISDNEnricher ..|> MessageEnricher
        InMemoryUserRepository --> UserInfo
        MSISDNEnricher --o UserRepository
        EnrichmentService --o MessageValidator
        EnrichmentService --o MessageEnricher
        EnrichmentService --> Message
    }
@enduml